# pasta

./: .gitignore  CMakeLists.txt  Makefile  README.md  base.c  bitmap.c  hello.nt  int.c  main.c  selfless.c  selfless.h  stack.c  stack.h  tricolore.c
examples/: loop.nt  memprof.nt  struct.nt
recipes/: benchmark.pasta  chef.pasta  dpad.bianco  file.pasta  goban.trico  hello.pasta  hello.trico  hello_screen.nt  io.pasta  lib.pasta  lib.trico  loop.nt  loop.pasta  memprof.pasta  mouse.trico  namespace.pasta  paint.trico  popcorn.bianco  scoping.pasta  struct.nt  struct.pasta  testset.pasta
src/: base.c  base.h  bitmap.c  bitmap.h  chef.c  chef.h  display_cairo.c  file.c  file.h  gc9107.c  int.c  int.h  main.c  parse.c  pasta.c  pasta.h  run.c  stack.c  stack.h  terminal.c  terminal.h  thumby.c  thumby.h  thumby_color.c  tricolore.c  tricolore.h  vars.c  vars.h
src/ports/: gtk_cairo.c  sdl.c  thumby.c  thumby_color.c
